# Scoring

./: .env  .gitignore  Cargo.toml  README.md  export.sh
chaincode/edu-mgmt/: chaincode.go
deploy/: configtx.yaml  crypto-config.yaml  docker-compose-base.yaml  docker-compose.yaml  start.sh  stop.sh
go/edu-mgmt/: api_test.go  api_test.json  chaincode_test.go  chaincode_test.json
src/: lib.rs  main.rs
src/api/: index.rs
src/models/: mod.rs
static/: index.html
static/static/css/: app.7b2afc2444e31d546cd5d0b933ec730d.css  app.7b2afc2444e31d546cd5d0b933ec730d.css.map  app.a85a73106d6032e4154f09da903a53f4.css  app.a85a73106d6032e4154f09da903a53f4.css.map  app.cd9d45024d10c1593390252154356316.css  app.cd9d45024d10c1593390252154356316.css.map
static/static/js/: app.19dd11b97a95b7ea2a5c.js  app.19dd11b97a95b7ea2a5c.js.map  app.b1d494fc3cf0f55cac0d.js  app.b1d494fc3cf0f55cac0d.js.map  app.c628daf21c43018d56ed.js  app.c628daf21c43018d56ed.js.map  manifest.3ad1d5771e9b13dbdad2.js.map  vendor.37bc3249511116c4e76d.js  vendor.37bc3249511116c4e76d.js.map
