[package]
name = "scoring"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
authors = ["LJason <ljason@ljason.cn>"]
readme = "README.md"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[lib]
name = "scoring"
path = "src/lib.rs"

[dependencies]
dotenv = "0.15"
regex = "1.5"
serde_json = "1.0"

[dependencies.rand]
version = "0.8"
default-features = false
features = ["std"]

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
version = "0.5.0-rc.1"
default-features = false
features = ["json"]

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]
